# mlops_exam_project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cloudbuild-deploy.yaml  cloudbuild.yaml  config-vertex-ai.yaml  config.yaml  data.dvc  environment.yaml  pyproject.toml  requirements.txt  requirements_server.txt  service-monitoring.yaml
.devcontainer/: devcontainer.json  developer.dockerfile
.dvc/: config
.dvc/tmp/: lock
.github/workflows/: codecheck.yml  tests.yml
config/: main.yaml  test.yaml  vertex.yaml  wandb.yaml
dockerfiles/: predict_model.dockerfile  server.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.html  report.py
src/: __init__.py  main.py  prediction_server.py  requirements.txt  server.dockerfile
src/data/: DataModule.py  DataSet.py
src/models/: model.py
tests/: test_LightningCLI.py
tests/data/: test_DataModule.py  test_DataSet.py  test_Model.py
tests/load_test/: locustfile.py
